[project]
name = "ai-chatbot-using-langchain-pinecone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.0.0,<2.0.0",
    "langchain-core>=1.0.0,<2.0.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "openai>=2.15.0",
    "pinecone>=6.0.0,<=7.0.0",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.53.0",
    "streamlit-chat>=0.1.1",
    "unstructured[local-inference]>=0.18.27",
    "langchain-text-splitters>=1.1.0",
]
